# kz80_c

./: Cargo.toml  README.md  run_tests.sh
examples/: array_func.c  arrays.c  bcdf_test.c  demo.c  fibonacci.c  globals.c  hello.c  hello_world.c  pointers.c  print_num.c  strcpy.c  strings.c
examples/include/: stdio.h  string.h
self/: cc.c  cc_with_preproc.c
src/: ast.rs  codegen.rs  lexer.rs  main.rs  parser.rs  preprocess.rs  token.rs
tests/: integration_tests.rs
